# stream_limiter

./: Cargo.toml  README.md
src/: lib.rs
src/tests/: mod.rs  network.rs  parametric.rs  read.rs  write.rs
src/tests/utils/: mod.rs  paramtests.rs
test_resources/: big.txt
tests/: network.rs  parametric.rs  read.rs  write.rs
tests/utils/: mod.rs  paramtests.rs
