[package]
name = "stream_limiter"
version = "3.1.1"
edition = "2021"
description = "Synchronously speed-limiting streams based on token bucket algorithm"
homepage = "https://github.com/massalabs/stream_limiter"
repository = "https://github.com/massalabs/stream_limiter"
readme = "README.md"
authors = ["Aurélien Foucault <af@massa.net>"]
license = "MIT OR Apache-2.0"
keywords = ["rate", "rate_limiting", "synchronous", "stream"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
sha2 = "0.10.6"
hex-literal = "0.4.1"
rand = { version = "0.8.5", features = ["small_rng"] }

[features]
heavy_testing = []
